--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.9"
 
 services:
   frontend:
-    build: ./how-much
+    build:
+    context: ./how-much
+    dockerfile: Dockerfile
     container_name: nuxt-frontend
     restart: always
     ports:
