--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   frontend:
-    build:
+    build: ./how-much
     context: ./how-much
     dockerfile: Dockerfile
     container_name: nuxt-frontend
